@@ -394,6 +394,7 @@
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance dateformat&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance timeformat&nbsp;<font color="#2e8b57"><b>CDATA</b></font>&nbsp;<font color="#ff00ff">&quot;&quot;</font><font color="#008b8b">&gt;</font><br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance dateddmm&nbsp;<font color="#2e8b57"><b>(</b></font><font color="#ff00ff">yes</font><font color="#008b8b">|</font><font color="#ff00ff">no</font><font color="#2e8b57"><b>)</b></font>&nbsp;<font color="#ff00ff">&quot;no&quot;</font><font color="#008b8b">&gt;</font><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ATTLIST</b></font>&nbsp;instance dateyyyyddmm&nbsp;<font color="#2e8b57"><b>(</b></font><font color="#ff00ff">yes</font><font color="#008b8b">|</font><font color="#ff00ff">no</font><font color="#2e8b57"><b>)</b></font>&nbsp;<font color="#ff00ff">&quot;no&quot;</font><font color="#008b8b">&gt;</font><br>
 <br>
 <font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ELEMENT</b></font>&nbsp;users&nbsp;<font color="#2e8b57"><b>(</b></font><font color="#ff00ff">user</font><font color="#008b8b">*</font><font color="#2e8b57"><b>)</b></font><font color="#008b8b">&gt;</font><br>
 <font color="#008b8b">&lt;!</font><font color="#a52a2a"><b>ELEMENT</b></font>&nbsp;user&nbsp;<font color="#008b8b">EMPTY</font><font color="#008b8b">&gt;</font><br>
@@ -519,7 +520,7 @@ below</li>
 </li>
 <li><b>dateformat</b> - Similar to datetimeformat but if a date without the time component is detected, the supplied format will be used instead of the format supplied in the datetimeformat parameter.  Defaults to whatever value was supplied in the datetimeformat parameter.</li>
 <li><b>timeformat</b> - Similar to datetimeformat but if a time without the date component is detected, the supplied format will be used instead of the format supplied in the datetimeformat parameter.  Defaults to whatever value was supplied in the datetimeformat parameter.</li>
-<li><b>dateddmm</b> - In some parts of the world, dates are commonly formatted with the day part first (eg. DD/MM/YYYY) and in others the month part first (eg. MM/DD/YYYY).  The locale of the database usually decides this but some databases have no such concept or allow you to arbitrarily format dates independent of the locale.  Setting this to "yes" tells SQL Relay to presume that dates are in DD/MM format when reformatting them and setting it to "no" tells SQL Relay to presume that dates are in MM/DD format.  Defaults to "no".  Note: this is especially problematic with MS SQL Server.  See <a href="../faq/#mssqldates">the FAQ</a> for more info.</li>
+<li><b>dateddmm</b> and <b>dateyyddmm</b> - When date translation is enabled (one or more of datetimeformat, dateformat or timeformat are set), the server attempts to interpret each field in the result set as a date to determine whether it needs to be translated or not.  It can parse the native formats of all the databases that SQL Relay currently supports, but it cannot tell by examination whether a date like 02-05-2011 is in MM-DD-YYYY format or DD-MM-YYYY format.  By default, it assumes MMDD, but if you want it to assume DDMM instead, set <b>dateddmm</b> to "yes".  Another parameter allows you to specify different behaviors for dates that start with years, such as 2011-02-05.  If <b>dateyyyyddmm</b> is set to "yes" then that date would be interpreted as being in the YYYY-DD-MM format.  If it is set to "no" then that date would be interpreted as being in the YYYY-MM-DD format.  If it is not set, then it defaults to whatever <b>dateddmm</b> is set to.  If neither are set then dates are universally interpreted to be in MM/DD format.  There are very specific cases where these two parameters need to be set differently from one another.  You'll know if you need to.  Note: date translatation in general is especially problematic with MS SQL Server.  See <a href="../faq/#mssqldates">the FAQ</a> for more info.</li>
 </ul> 
 <li><b>user</b>
 <ul>
